--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,16 +2,10 @@ server:
   port: 8080
 
 spring:
-  application:
-    name: productor-microservicio
-    kafka:
-    bootstrap-servers: localhost:9092
-    producer:
-      key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+  kafka:
+  producer:
+    bootstrap-servers: kafka:9092
   r2dbc:
     url: r2dbc:postgresql://ep-dry-feather-a50464ji.us-east-2.aws.neon.tech:5432/jose?options=endpoint%3Dep-dry-feather-a50464ji&sslmode=require
     username: JG-ChatBot_owner
     password: Qbr4YsUfdz6R
-
-
