--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,17 @@
 server:
-  port: 8081  # Asegúrate de que tiene un puerto diferente
+  port: 8080
 
 spring:
-  application:
-    kafka:
+  kafka:
+    bootstrap-servers: kafka:9092
     consumer:
-      bootstrap-servers: localhost:9092
-      group-id: mi-grupo
+      group-id: my-group
       auto-offset-reset: earliest
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+
+
+
   r2dbc:
     url: r2dbc:postgresql://ep-dry-feather-a50464ji.us-east-2.aws.neon.tech:5432/jose?options=endpoint%3Dep-dry-feather-a50464ji&sslmode=require
     username: JG-ChatBot_owner
